K3S/tools/graylog-stack/graylog/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: graylog
  namespace: graylog-stack
spec:
  selector:
    matchLabels:
      app: graylog
  template:
    metadata:
      labels:
        app: graylog
    spec:
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              preference:
                matchExpressions:
                  - key: kubernetes.io/hostname
                    operator: NotIn
                    values:
                      - k3s-worker-02
      containers:
        - name: graylog
          image: graylog/graylog:6.1.5
          ports:
            - containerPort: 9000
            - containerPort: 12201
            - containerPort: 12201
              protocol: UDP
          volumeMounts:
            - name: graylog-volume
              mountPath: /usr/share/graylog/data
              subPath: graylog
      volumes:
        - name: graylog-volume
          persistentVolumeClaim:
            claimName: graylog-pvc
