K3S/tools/graylog-stack/graylog/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: graylog-svc
  namespace: graylog-stack
spec:
  selector:
    app: graylog
  ports:
    - name: web
      port: 9000
      targetPort: 9000
    - name: gelf-tcp
      port: 12201
      targetPort: 12201
    - name: gelf-udp
      port: 12201
      protocol: UDP
      targetPort: 12201
